<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innovative.foodciti.activities.OrderSummaryActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_order_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.innovative.foodciti.activities.OrderSummaryActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/green01"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/restaurant_name"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_restaurant_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/tel"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_container"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_delivery_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/delivery"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:text="@string/order_number"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:text="@string/date"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_container"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_items"
                android:orientation="vertical"
                android:padding="12dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/subtotal"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/discount_5"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/delivery_charge"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_delivery_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/total"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_total_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/app_name"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tv_money_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/your_money_status"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_cash_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/cash"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/customer_details"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_customer_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:maxLines="2"
                    android:text="@string/address"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_customer_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:maxLines="1"
                    android:text="@string/city"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_customer_city_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:maxLines="2"
                    android:text="@string/pin_number"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_customer_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:maxLines="2"
                    android:text="@string/contact_number"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</ScrollView>
