<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.innovative.foodciti.authentication.LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.innovative.foodciti.authentication.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@null"
            android:src="@mipmap/foodcity_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ed_round"
                android:hint="@string/username"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="6dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ed_round"
                android:hint="@string/password"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="6dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/keep_me_signed_in"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round"
                android:inputType="textMultiLine"
                android:text="@string/sign_in"
                android:textColor="@color/white" />



        </LinearLayout>


    </LinearLayout>
</ScrollView>
